src/test/ui/rfc-2632-const-trait-impl/const-trait-bound-opt-out/feature-gate.gated.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/feature-gate.rs:16:1
   |
LL | fn main() {}
   | ^^^^^^^^^

error: aborting due to previous error

